--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <p>This is a layout</p>
-    <li>THis is an error
+    <li>THis is an error thingy
     <img src="bob"
     <p>testing
 </body>
