this should run

--- a/test.html
+++ b/test.html
@@ -12,8 +12,10 @@
 </head>
 <body>
     <p>This is a layout</p>
-    <li>THis is an error thingyyy not going towork
-    <img src="bob"
-    <p>testing
+    <ul>
+    <li>VALID CODE</li>
+    </ul>
+    <img src="bob">
+    <p>testing</p>
 </body>
 </html>
