--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
     <ul>
     <li>VALID CODE</li>
     </ul>
-    <img src="bob">
+    <img src="bob" alt="A test alt tag">
     <p>testing</p>
 </body>
 </html>
